# pottery-map

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  README.md  README.rst  __pkginfo__.py  companies.py  companies.toml  companies.toml.schema.json  company_pages.py  formate.toml  index.html  map.py  pottery.toml  pottery.toml.schema.json  pottery_map.css  pyproject.toml  repo_helper.yml  requirements.txt  stubs.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: flake8.yml  mypy.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
output/: dashboard.html  index.html  items.html
output/categories/: index.html  other.html  plates.html
output/companies/: a_j_wilkinson_ltd.html  index.html  j_g_meakin.html  wedgwood.html  wwrd.html
output/static/css/: pottery_map.css  sidebar.css  style.css
pottery_map/: __init__.py  __main__.py  _jinja2_workarounds.py  companies.py  company.py  dashboard.py  links.py  map.py  nls_basemaps.py  notes.py  pottery.py  pottery_map.py  schema.py  types.py  utils.py
pottery_map/static/: L.Control.Layers.Minimap.Toggle.js  L.Control.Layers.Minimap.js  dashboard.js  map_popup.js  pottery_map.css  sidebar.css  sidebar.js  style.css
pottery_map/templates/: __init__.py  carousel.jinja2  categories_index.jinja2  category_page.jinja2  collection_page.jinja2  company_index.jinja2  company_page.jinja2  dashboard.jinja2  defunct_dagger.jinja2  items_page.jinja2  map.jinja2  map_popup.jinja2  markdown_page.jinja2  notes.jinja2  notes_section.macro.jinja2  page.jinja2  sidebar_button.jinja2  write_company_entries.macro.jinja2
(+3 files in other folders)
