[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "pottery-map"
version = "0.0.0"
description = "Map showing where items in a pottery collection were manufactured."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/domdfcoding/pottery-map"
"Issue Tracker" = "https://github.com/domdfcoding/pottery-map/issues"
"Source Code" = "https://github.com/domdfcoding/pottery-map"

[tool.whey]
base-classifiers = []
python-versions = [ "3.10", "3.11", "3.12", "3.13",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "pottery_map"
additional-files = [ "recursive-include pottery_map/static/ *", "recursive-include pottery_map/templates/ *",]

[tool.importcheck]

[tool.mypy]
python_version = "3.10"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.djlint]
profile = "jinja"
extension = "jinja2"
preserve_blank_lines = true
ignore = "H029,H031,H006,H030,H025,H013"
